--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version : '3'
 
 services:
+  webapp:
+    container_name: cityapi
+    build: .
+    ports:
+      - '5003:5003'
+    depends_on:
+      - mysql
+	  
   mysql:
     image: mysql:latest
     container_name: dev_mysql
@@ -11,9 +19,9 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: default_schema
     ports:
-      - 3306:3306
+	  - 3306:3306
     volume:
-      - mysqldata:/var/lib/mysql
+	  - mysqldata:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
