--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dateformat": "^3.0.3",
     "express": "^4.17.1",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4"
