--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: API
     ports:
-      - 3306:3306
+      - 3307:3306
     volumes:
-      - ./mysqldata:/var/lib/mysql
+      - ./root/mysqldata:/var/lib/mysql
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: dev_pma
@@ -30,7 +30,7 @@ services:
       - mysql
     environment:
       PMA_HOST: mysql
-      PMA_PORT: 3306
+      PMA_PORT: 3307
       PMA_ARBITRARY: 1
     restart: always
     ports:
