--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   webapp:
     container_name: cityapi
     build: .
+    restart: always
     ports:
       - '5002:5002'
     depends_on:
