--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_USER: user
-      MYSQL_PASSWORD: k5dtAvw7f9xHSw7L
-      MYSQL_ROOT_PASSWORD: kqfMaPTn8eBfGmNK
+      MYSQL_PASSWORD: User1714
+      MYSQL_ROOT_PASSWORD: Admin1714
       MYSQL_DATABASE: API
     ports:
       - 3306:3306
